Add a new benchmark to measure impact zgc in comparison to parallel GC (#10464)
* Add explicit flushing
* update hikariCP settings in hikari cp
* Update majavat templates to use each

Co-authored-by: jj <keistaslogairkosulys@gmail.com>