@@ -5,10 +5,10 @@ COPY resources resources
 COPY src src
 RUN lein with-profile robaho uberjar
 
-FROM ghcr.io/graalvm/graalvm-community:25
+FROM amazoncorretto:25
 WORKDIR /ring-http-exchange
 COPY --from=lein /ring-http-exchange/target/ring-http-server-1.0.0-standalone.jar app.jar
 
 EXPOSE 8080
 
-CMD ["java", "-server", "-XX:+UseParallelGC", "-XX:MaxRAMPercentage=70", "-Dclojure.compiler.direct-linking=true", "-jar", "app.jar"]
+CMD ["java", "-server", "-XX:+UseZGC", "-XX:MaxRAMPercentage=70", "-Dclojure.compiler.direct-linking=true", "-jar", "app.jar"]
